# covid_test_kit_detection

./: LICENSE  covid_kit_demo.ipynb  readme.md
dataset/: train.txt  val.txt
deploy/openvino/: main.py
deploy/openvino/detection/retinaface/: config.yaml  model_class.py
deploy/openvino/detection/retinaface/dependencies/: utils.py
deploy/openvino/detection/scrfd/: model_class.py
deploy/openvino/models/covid0/: scrfd_500m_bnkps_fast_covid-kit.mapping  scrfd_500m_bnkps_fast_covid-kit.xml
deploy/r329/nn_r329_scrfd_new/main/: CMakeLists.txt
deploy/r329/nn_r329_scrfd_new/main/include/: standard_api.h
deploy/r329/nn_r329_scrfd_new/main/src/: main.c
deploy/r329/nn_r329_scrfd_new/main/src/decoder/: CMakeLists.txt  scrfd_decode_cv.cpp  scrfd_decode_cv.h
deploy/r329/r329_model_convert/: aipu_build_scrfd.cfg  note.ipynb
deploy/r329/r329_model_convert/output/: scrfd_res.txt  scrfd_res_opt_template.json  scrfd_res_quant.txt
docs/: 新冠抗原检测试剂盒识别算法研究.docx
models/: scrfd_500m_bnkps_fast_covid-kit.onnx  scrfd_500m_bnkps_fast_covid-kit_shape320x320.onnx  scrfd_x00m_bnkps_fast_covid-kit_resnet_shape240x320.onnx  scrfd_x00m_bnkps_fast_covid-kit_resnet_shape320x240.onnx  scrfd_x00m_bnkps_fast_covid-kit_resnet_shape320x320.onnx  scrfd_x00m_bnkps_fast_covid-kit_resnet_shape640x640.onnx
tools/: scrfd.py
